Release 0.25 - ? 

Features added:
- XML export now includes effort records.



Release 0.24 - March 10, 2005

Bugs fixed:
- Saving a selection of tasks to a separate file would also save all effort 
  records to that file (instead of just the effort records for the selected 
  tasks), giving errors when loading that file.
- Deleting a task with effort records would not delete the effort
  records.

Features added:
- The tracking status of tasks is saved. So if you start tracking a
  task, quit Task Coach, and restart Task Coach later, effort for that 
  task is still being tracked. Requested by Bob Hossley.



Release 0.23 - February 20, 2005

Bugs fixed:
- Fixed a couple of bugs in the unit tests, discovered by Stephen Boulet
  and Jerome Laheurte on the Linux platform.



Release 0.22 - February 17, 2005

Bugs fixed:
- In the effort summary view, effort spent on a task in the same month
  or week but in different years would erroneously be added. 
  E.g. effort in January 2004 and January 2006 would be added. 
- The mechanism to prevent effort periods with a negative duration (i.e.
  a start time later than the stop time) in the effort editor was
  invoked on each key stroke which caused inconvenient behaviour. Fixed
  it by only invoking it when the user leaves the text or combo box.

Features added:
- Added possibility to start tracking effort for a task, with start time
  equal to the end time of the previous effort period. This is for
  example convenient if you stop working on a task and then spend
  some time deciding on what to do next. This is the 'Start tracking 
  from last stop time' menu item in the 'Effort' menu.
- (Re)Added the unittests to the source distribution. See INSTALL.txt.
- Export to XML. Currently limited to tasks, effort is not exported yet.



Release 0.21 - February 9, 2005

Bugs fixed:
- Setting the start date/time in the effort editor would change the stop
  date/time while not strictly necessary to prevent negative durations.